--- a/futuregreen/static/css/base.css
+++ b/futuregreen/static/css/base.css
@@ -62,6 +62,7 @@ body {
         padding:0;
         position:relative;
         font: normal 87.5% "Segoe UI", "Lucida Sans", Arial, Helvetica, sans-serif;
+        background: url('images/left-bg.png') no-repeat;
         -webkit-transition: all 0.5s ease-in;
     }
 
