--- a/futuregreen/static/css/base.css
+++ b/futuregreen/static/css/base.css
@@ -443,7 +443,7 @@ div.main section.featured article.project {
         overflow: hidden;
         float:left;
         width:15%;
-        margin: 0 2.5%
+        margin: 0 2.5%;
         color:#fff;
         font-weight: bold;
         text-align: center;
