--- a/futuregreen/templates/portfolio/project_detail.html
+++ b/futuregreen/templates/portfolio/project_detail.html
@@ -85,7 +85,10 @@
                     <div class="info-boxes">
                         <ul>
                         {% if project.date_end %}
-                            <li class="date flex-box flex-margin">{{ project.date_end|date:"F Y" }}</p>
+                            <li class="date flex-box flex-margin">
+                                <span class="month">{{ project.date_end|date:"F" }}</span>
+                                <span class="year">{{ project.date_end|date:"Y" }}</span>
+                            </li>
                         {% endif %}
                         <li class="size flex-box flex-margin">{{ project.area|floatformat }} {{ project.get_unit_display }}</p>
                         </ul>
