--- a/futuregreen/static/css/base.css
+++ b/futuregreen/static/css/base.css
@@ -418,10 +418,11 @@ div.main section.featured article.project {
         color:#fff;
         text-transform: uppercase;
         text-align: center;
+        font-weight: bold;;
     }
 
     .details .date .year {
-        font-size: 2em;
+        font-size: 2.2em;
     }
 
     .details .description .meta {
