--- a/futuregreen/templates/portfolio/project_detail.html
+++ b/futuregreen/templates/portfolio/project_detail.html
@@ -85,7 +85,7 @@
                     <div class="info-boxes">
                         <ul>
                         {% if project.date_end %}
-                            <li class="date flex-box flex-margin">
+                            <li class="date flex-box flex-margin center">
                                 <span class="month">{{ project.date_end|date:"F" }}</span>
                                 <span class="year">{{ project.date_end|date:"Y" }}</span>
                             </li>
