--- a/futuregreen/static/css/base.css
+++ b/futuregreen/static/css/base.css
@@ -421,7 +421,8 @@ div.main section.featured article.project {
         font-weight: bold;;
     }
 
-    .details .date .year {
+    .details .date .year,
+    .details .size .unit {
         font-size: 2.3em;
     }
 
