editing detail page

--- a/futuregreen/static/css/base.css
+++ b/futuregreen/static/css/base.css
@@ -422,7 +422,7 @@ div.main section.featured article.project {
     }
 
     .details .date .year,
-    .details .size .unit {
+    .details .size .number {
         font-size: 2.3em;
     }
 
