editing detail page

--- a/futuregreen/static/css/base.css
+++ b/futuregreen/static/css/base.css
@@ -432,6 +432,10 @@ div.main section.featured article.project {
         font-size: .85em;
     }
 
+    .details .date .month {
+        line-height:1.1em;
+    }
+
     .details .description .meta {
         float:right;
         width:40%;
