editing detail page

--- a/futuregreen/templates/portfolio/project_detail.html
+++ b/futuregreen/templates/portfolio/project_detail.html
@@ -93,7 +93,7 @@
                             </li>
                         {% endif %}
                         <li class="size flex-box flex-margin">
-                            <p>
+                            <p class="center">
                             <span class="number">{{ project.area|floatformat }}</span>
                             <span class="unit">{{ project.get_unit_display }}</span>
                             </p>
