--- a/futuregreen/static/css/base.css
+++ b/futuregreen/static/css/base.css
@@ -422,14 +422,20 @@ div.main section.featured article.project {
         line-height:1em;
     }
 
+    .details .size p {
+
+    }
+
     .details .date .year,
     .details .size .number {
         font-size: 2.3em;
+        line-height:1em;
     }
 
     .details .date .month,
     .details .size .unit {
         font-size: .85em;
+        line-height:1em;
     }
 
     .details .date .month {
