--- a/futuregreen/templates/portfolio/project_detail.html
+++ b/futuregreen/templates/portfolio/project_detail.html
@@ -34,12 +34,20 @@
                         <ul class="categories flex-margin">
                             {% if project.project_types.all %}
                                 {% for category in project.project_types.all %}
-                                    <li class="project-type flex-box center"> {{ category.alternate_title }} </li>
+                                    <li class="project-type flex-box center">
+                                        <a href="#" title="{{ category.name }}">
+                                            {{ category.alternate_title }}
+                                        </a>
+                                    </li>
                                 {% endfor %}
                             {% endif %}
                             {% if project.landscape_types.all %}
                                 {% for category in project.landscape_types.all %}
-                                    <li class="landscape-type flex-box center"> {{ category.alternate_title }} </li>
+                                    <li class="landscape-type flex-box center">
+                                        <a href="#" title="{{ category.name }}">
+                                            {{ category.alternate_title }}
+                                        </a>{{ category.alternate_title }}
+                                    </li>
                                {% endfor %}
                             {% endif %}
                         </ul>
