--- a/futuregreen/templates/portfolio/project_detail.html
+++ b/futuregreen/templates/portfolio/project_detail.html
@@ -35,7 +35,7 @@
                             {% if project.project_types.all %}
                                 {% for category in project.project_types.all %}
                                     <li class="project-type flex-box center">
-                                        <a href="#" title="{{ category.name }}">
+                                        <a href="#" title="{{ category.name }}" class="flex-box center">
                                             {{ category.alternate_title }}
                                         </a>
                                     </li>
@@ -44,9 +44,9 @@
                             {% if project.landscape_types.all %}
                                 {% for category in project.landscape_types.all %}
                                     <li class="landscape-type flex-box center">
-                                        <a href="#" title="{{ category.name }}">
+                                        <a href="#" title="{{ category.name }}" class="flex-box center">
                                             {{ category.alternate_title }}
-                                        </a>{{ category.alternate_title }}
+                                        </a>
                                     </li>
                                {% endfor %}
                             {% endif %}
