editing detail page

--- a/futuregreen/templates/portfolio/project_detail.html
+++ b/futuregreen/templates/portfolio/project_detail.html
@@ -133,9 +133,9 @@
                 var a = $(".shim")
             }
             var width = a.width();
-            var height = width * .6125;
+            //var height = width * .6125;
 
-            a.css('height', height);
+            //a.css('height', height);
     }
 
     function FlexMargin() {
