--- a/futuregreen/static/css/base.css
+++ b/futuregreen/static/css/base.css
@@ -308,22 +308,29 @@ div.main section.featured article.project {
         filter:alpha(opacity=100); /* For IE8 and earlier */
     }
 
-    .slideshow .flex-direction-nav a {
+    .slideshow .flex-direction-nav li {
         position:absolute;
-        top:0;
+        top:50%;
         width:33%;
-        height:50%;
+        padding: 33%;
         z-index:1000;
-        text-indent:-9999;
     }
 
+    .slideshow .flex-direction-nav a {
+        position:relative;
+        top:-50%;
+        height;
+    }
+
+
+
     .slideshow .flex-direction-nav .next {
-        right:1.25%;
+        right:2.5%;
         text-align: right;
     }
 
     .slideshow .flex-direction-nav .prev {
-        left:1.25%;
+        left:2.5%;
     }
 
 /* expanded slideshow styles */
