editing detail page

--- a/futuregreen/static/css/base.css
+++ b/futuregreen/static/css/base.css
@@ -319,7 +319,7 @@ div.main section.featured article.project {
     .slideshow .flex-direction-nav a {
         position:relative;
         top:-50%;
-        height;
+        height:50%;
     }
 
 
