editing detail page

--- a/futuregreen/static/css/base.css
+++ b/futuregreen/static/css/base.css
@@ -241,7 +241,8 @@ div.main section.featured article.project {
     article.project {
         position:relative;
         overflow: auto;
-        background: url('images/detail-bg-right.png') no-repeat top right;
+        background: url('images/detail-bg-right.png') no-repeat top right,
+                    url('images/left-bg.png') no-repeat 65% 58.33%;
     }
 
 /* slideshow */
