editing detail page

--- a/futuregreen/static/css/base.css
+++ b/futuregreen/static/css/base.css
@@ -241,8 +241,8 @@ div.main section.featured article.project {
     article.project {
         position:relative;
         overflow: auto;
-        background: url('images/detail-bg-right.png') no-repeat top right,
-                    url('images/vertical-bg.png') no-repeat 57.52% 88%;
+        /*background: url('images/detail-bg-right.png') no-repeat top right,
+                    url('images/vertical-bg.png') no-repeat 57.52% 88%;*/
     }
 
 /* slideshow */
