editing detail page

--- a/futuregreen/templates/portfolio/project_detail.html
+++ b/futuregreen/templates/portfolio/project_detail.html
@@ -140,6 +140,7 @@
 
     function FlexMargin() {
             $('.flex-margin').each(function(){
+                var m
                 m = $(this).margin().left;
                 $(this).margin({bottom: m, top: m })
             });
