editing detail page

--- a/futuregreen/templates/portfolio/project_detail.html
+++ b/futuregreen/templates/portfolio/project_detail.html
@@ -142,6 +142,7 @@
             $('.flex-margin').each(function(){
                 var m
                 m = $(this).margin().left;
+                alert(m + "or" + $(this).margin().left)
                 $(this).margin({bottom: m, top: m })
             });
             /*
