--- a/futuregreen/templates/portfolio/project_detail.html
+++ b/futuregreen/templates/portfolio/project_detail.html
@@ -145,17 +145,17 @@
                 alert(m + "or" + $(this).margin().left)
                 $(this).margin({bottom: m, top: m })
             });
-            /*
+
             var li = $(".controls li");
             var div = $(".controls");
             var li_width = li.width();
             var div_width = div.width();
-            var margin = div_width * .0125;
+            var margin = div_width * .142857143;
 
             li.css('margin-top', margin);
             li.css('margin-bottom', margin);
             div.css('margin-bottom', margin);
-            div.css('margin-top', margin);*/
+            div.css('margin-top', margin);
     }
 
     function FlexBox() {
