--- a/futuregreen/templates/portfolio/project_detail.html
+++ b/futuregreen/templates/portfolio/project_detail.html
@@ -170,8 +170,8 @@
 
 
     $(document).ready(function() {
-        FlexBox();
-        FlexMargin();
+        /*FlexBox();
+        FlexMargin();*/
         $('.carousel').flexslider({
             animation: "slide",
             slideshow: true,
