editing detail page

--- a/futuregreen/templates/portfolio/project_detail.html
+++ b/futuregreen/templates/portfolio/project_detail.html
@@ -196,9 +196,9 @@
     });
 
     $(window).resize(function() {
-        Flex();
+        /*Flex();
         FlexBox();
-        FlexMargin();
+        FlexMargin();*/
     });
 
     $("#open").click(function () {
