editing detail page

--- a/futuregreen/templates/base.html
+++ b/futuregreen/templates/base.html
@@ -49,7 +49,7 @@
 {% endblock head %}
 </head>
 
-<body class="{% block body_class %}default{% endblock body_class %}">
+<body id="{% block body_id %}default{% endblock body_id%}">
 {% block body %}
     {% block header %}
     <header>
