--- a/futuregreen/static/css/base.css
+++ b/futuregreen/static/css/base.css
@@ -152,7 +152,7 @@ body {
     -ms-box-sizing: border-box;
     box-sizing: border-box;
     margin: 0;
-    padding: .714285714em;
+    /*padding: .714285714em;*/
 }
 
 section.text .tease {
@@ -185,7 +185,6 @@ div.secondary section.projects article.project {
 
 div.secondary section.text article {
     clear:both;
-    width:100%;
     background:#d27193;
     color:white;
 }
