editing detail page

--- a/futuregreen/templates/index.html
+++ b/futuregreen/templates/index.html
@@ -80,11 +80,11 @@
             $("article").css('margin-bottom', margin);
         }
         $(document).ready(function() {
-            Flex();
+            /*Flex();*/
         });
 
         $(window).resize(function() {
-            Flex();
+            /*Flex();*/
         });
     </script>
 {% endblock js_local %}
