--- a/futuregreen/templates/index.html
+++ b/futuregreen/templates/index.html
@@ -72,19 +72,15 @@
 {% block js_local %}
     <script type="text/javascript">
         function Flex() {
-            var height = $(".project").width();
+            var height = $(".project").height();
             $(".text > article").css('min-height', height);
-            var total_width = $(".content").width();
-            var margin = total_width * 0.0083333;
-            $("article").css('margin-top', margin);
-            $("article").css('margin-bottom', margin);
         }
         $(document).ready(function() {
-            /*Flex();*/
+            Flex();
         });
 
         $(window).resize(function() {
-            /*Flex();*/
+            Flex();
         });
     </script>
 {% endblock js_local %}
