--- a/futuregreen/templates/index.html
+++ b/futuregreen/templates/index.html
@@ -2,8 +2,8 @@
 {% load generic_flatblocks %}
 {% block body_id %}home{% endblock body_id %}
 {% block content %}
-    <div class="tertiary">
-        {% for project in project_list|slice:":3" %}
+    <div>
+        {% for project in project_list|slice:":1" %}
             <article class="project" id="{{ project.slug }}">
                 {% for image in project.projectimage_set.all %}
                     {% if image.is_main %}
@@ -12,16 +12,11 @@
                 {%  endfor %}
             </article>
         {% endfor %}
-    </div>
-    <div class="main">
-        <section class="text" id="profile">
-            <article>
+            <article class="text" id="profile">
             {%  gblock "firm_profile" for "content.ContentBlock" with "content/contentblock/excerpt.html" %}
             <a href="#" class="tease">Read More</a>
             </article>
-        </section>
-        <section class="projects">
-            {% for project in project_list|slice:"3:5" %}
+           {% for project in project_list|slice:"2:4" %}
                 <article class="project" id="{{ project.slug }}">
                     {% for image in project.projectimage_set.all %}
                         {% if image.is_main %}
@@ -31,23 +26,23 @@
                     {%  endfor %}
                 </article>
             {% endfor %}
-        </section>
-        <section class="projects featured">
-            {% for project in project_list|slice:"5:6" %}
-                <article class="project" id="{{ project.slug }}">
-                    {% for image in project.projectimage_set.all %}
-                        {% if image.is_main %}
-                            <a href="{{ project.get_absolute_url }}">
-                                <img alt="{{ project.title }}" src="{{ image.featured.url }}" /></a>
-                        {% endif %}
-                    {%  endfor %}
-                </article>
-            {% endfor %}
-        </section>
     </div>
-    <div class="secondary">
-        <section class="projects">
-        {% for project in project_list|slice:"6:" %}
+    <div>
+       {% for project in project_list|slice:"4:6" %}
+           <article class="project" id="{{ project.slug }}">
+               {% for image in project.projectimage_set.all %}
+                   {% if image.is_main %}
+                       <a href="{{ project.get_absolute_url }}">
+                           <img alt="{{ project.title }}" src="{{ image.featured.url }}" />
+                       </a>
+                   {% endif %}
+               {%  endfor %}
+           </article>
+       {% endfor %}
+
+    </div>
+    <div>
+        {% for project in project_list|slice:"6:7" %}
             <article class="project" id="{{ project.slug }}">
                 {% for image in project.projectimage_set.all %}
                     {% if image.is_main %}
@@ -57,15 +52,24 @@
                 {%  endfor %}
             </article>
         {% endfor %}
-        </section>
-        <section class="text" id="news">
-            <article>
+    </div>
+    <div>
+       {% for project in project_list|slice:"7:" %}
+            <article class="project" id="{{ project.slug }}">
+                {% for image in project.projectimage_set.all %}
+                    {% if image.is_main %}
+                        <a href="{{ project.get_absolute_url }}">
+                            <img alt="{{ project.title }}" src="{{ image.list.url }}" /></a>
+                    {% endif %}
+                {%  endfor %}
+            </article>
+        {% endfor %}
+       <article>
                 <h1 class="date">{{ item.date_published|date:"M d, Y" }}</h1>
                 <h2>{{ item.title }}</h2>
                 {{ item.excerpt|truncatewords:20 }}
                 <p><a href="#" class="tease">Read More</a></p>
-            </article>
-        </section>
+       </article>
     </div>
 
 {% endblock content %}
