--- a/futuregreen/templates/index.html
+++ b/futuregreen/templates/index.html
@@ -4,7 +4,7 @@
 {% block content %}
     <div>
         {% for project in project_list|slice:":1" %}
-            <article class="project" id="{{ project.slug }}">
+            <article style="float:left; width:16.6666667%" class="project" id="{{ project.slug }}">
                 {% for image in project.projectimage_set.all %}
                     {% if image.is_main %}
                         <a href="{{ project.get_absolute_url }}"><img src="{{ image.list.url }}" /></a>
@@ -12,7 +12,7 @@
                 {%  endfor %}
             </article>
         {% endfor %}
-            <article class="text" id="profile">
+            <article style="float:left; width:50%" class="text" id="profile">
             {%  gblock "firm_profile" for "content.ContentBlock" with "content/contentblock/excerpt.html" %}
             <a href="#" class="tease">Read More</a>
             </article>
@@ -29,7 +29,7 @@
     </div>
     <div>
        {% for project in project_list|slice:"4:6" %}
-           <article class="project" id="{{ project.slug }}">
+           <article style="float:left; width:16.6666667%" ="project" id="{{ project.slug }}">
                {% for image in project.projectimage_set.all %}
                    {% if image.is_main %}
                        <a href="{{ project.get_absolute_url }}">
