--- a/futuregreen/templates/index.html
+++ b/futuregreen/templates/index.html
@@ -17,7 +17,7 @@
             <a href="#" class="tease">Read More</a>
             </article>
            {% for project in project_list|slice:"2:4" %}
-                <article class="project" id="{{ project.slug }}">
+                <article  style="float:left; width:16.6666667%" class="project" id="{{ project.slug }}">
                     {% for image in project.projectimage_set.all %}
                         {% if image.is_main %}
                             <a href="{{ project.get_absolute_url }}">
@@ -29,7 +29,7 @@
     </div>
     <div>
        {% for project in project_list|slice:"4:6" %}
-           <article style="float:left; width:16.6666667%" ="project" id="{{ project.slug }}">
+           <article class="project" id="{{ project.slug }}">
                {% for image in project.projectimage_set.all %}
                    {% if image.is_main %}
                        <a href="{{ project.get_absolute_url }}">
