--- a/futuregreen/templates/index.html
+++ b/futuregreen/templates/index.html
@@ -27,7 +27,7 @@
                 </article>
             {% endfor %}
     </div>
-    <div>
+    <div style="width:16.66667%; float:left;">
        {% for project in project_list|slice:"4:6" %}
            <article class="project" id="{{ project.slug }}">
                {% for image in project.projectimage_set.all %}
@@ -41,7 +41,7 @@
        {% endfor %}
 
     </div>
-    <div>
+    <div style="width:33.33334%; float:left;">
         {% for project in project_list|slice:"6:7" %}
             <article class="project" id="{{ project.slug }}">
                 {% for image in project.projectimage_set.all %}
@@ -53,7 +53,7 @@
             </article>
         {% endfor %}
     </div>
-    <div>
+    <div style="width:50%; float:left;">
        {% for project in project_list|slice:"7:" %}
             <article class="project" id="{{ project.slug }}">
                 {% for image in project.projectimage_set.all %}
