--- a/futuregreen/static/css/base.css
+++ b/futuregreen/static/css/base.css
@@ -145,7 +145,7 @@ body {
     margin: 0;
 }
 
-#home .content > div > section > article {
+#home .content > div > article {
     -webkit-box-sizing: border-box;
     -moz-box-sizing: border-box;
     -o-box-sizing: border-box;
