--- a/futuregreen/static/css/base.css
+++ b/futuregreen/static/css/base.css
@@ -151,8 +151,7 @@ body {
     -o-box-sizing: border-box;
     -ms-box-sizing: border-box;
     box-sizing: border-box;
-    margin: 0;
-    padding: .714285714em;
+    margin: .714285714em;
 }
 
 section.text .tease {
