--- a/futuregreen/templates/index.html
+++ b/futuregreen/templates/index.html
@@ -64,7 +64,7 @@
                 {%  endfor %}
             </article>
         {% endfor %}
-       <article style="width:66.66667%;float:left; background:#d27193;">
+       <article style="width:66.66667%;float:left;">
                 <h1 class="date">{{ item.date_published|date:"M d, Y" }}</h1>
                 <h2>{{ item.title }}</h2>
                 {{ item.excerpt|truncatewords:20 }}
