editing detail page

--- a/futuregreen/templates/index.html
+++ b/futuregreen/templates/index.html
@@ -12,7 +12,7 @@
                 {%  endfor %}
             </article>
         {% endfor %}
-            <article style="float:left; width:50%" class="text" id="profile">
+            <article style="float:left; width:50%; height:100%; background:#d27193; color:white; padding: .714285714em;" class="text" id="profile">
             {%  gblock "firm_profile" for "content.ContentBlock" with "content/contentblock/excerpt.html" %}
             <a href="#" class="tease">Read More</a>
             </article>
