--- a/futuregreen/templates/index.html
+++ b/futuregreen/templates/index.html
@@ -12,9 +12,11 @@
                 {%  endfor %}
             </article>
         {% endfor %}
-            <article style="float:left; width:50%; height:100%; background:#d27193; color:white; padding: .714285714em;" class="text" id="profile">
-            {%  gblock "firm_profile" for "content.ContentBlock" with "content/contentblock/excerpt.html" %}
-            <a href="#" class="tease">Read More</a>
+            <article style="float:left; width:50%; height:100%;" class="text" id="profile">
+                <div style="background:#7eac32 url('images/profile_bg.png') no-repeat left top; padding: .714285714em;">
+                {%  gblock "firm_profile" for "content.ContentBlock" with "content/contentblock/excerpt.html" %}
+                <a href="#" class="tease">Read More</a>
+                </div>
             </article>
            {% for project in project_list|slice:"1:3" %}
                 <article  style="float:left; width:16.6666667%" class="project" id="{{ project.slug }}">
