editing detail page

--- a/futuregreen/templates/index.html
+++ b/futuregreen/templates/index.html
@@ -12,7 +12,7 @@
                 {%  endfor %}
             </article>
         {% endfor %}
-            <article style="float:left; width:50%; height:100%; background:#7eac32" class="text" id="profile">
+            <article style="float:left; width:50%; background:#7eac32;" class="text" id="profile">
                 <div style="background:#7eac32 url('images/profile_bg.png') no-repeat left top; padding: .714285714em;">
                 {%  gblock "firm_profile" for "content.ContentBlock" with "content/contentblock/excerpt.html" %}
                 <a href="#" class="tease">Read More</a>
