--- a/futuregreen/templates/index.html
+++ b/futuregreen/templates/index.html
@@ -2,7 +2,7 @@
 {% load generic_flatblocks %}
 {% block body_id %}home{% endblock body_id %}
 {% block content %}
-    <div>
+    <div style="overflow: auto;">
         {% for project in project_list|slice:":1" %}
             <article style="float:left; width:16.6666667%; padding:" class="project" id="{{ project.slug }}">
                 {% for image in project.projectimage_set.all %}
@@ -12,7 +12,7 @@
                 {%  endfor %}
             </article>
         {% endfor %}
-            <article style="float:left; width:50%; background:#7eac32;" class="text" id="profile">
+            <article style="float:left; width:50%; height:100%; background:#7eac32;" class="text" id="profile">
                 <div style="background:#7eac32 url('images/profile_bg.png') no-repeat left top; padding: .714285714em;">
                 {%  gblock "firm_profile" for "content.ContentBlock" with "content/contentblock/excerpt.html" %}
                 <a href="#" class="tease">Read More</a>
