--- a/futuregreen/templates/index.html
+++ b/futuregreen/templates/index.html
@@ -81,7 +81,7 @@
     <script type="text/javascript">
         function Flex() {
             var height = $(".project").height();
-            $(".text > article > div").css('min-height', height);
+            $("article.text > div").css('min-height', height);
         }
         $(document).ready(function() {
             Flex();
