--- a/futuregreen/templates/index.html
+++ b/futuregreen/templates/index.html
@@ -80,7 +80,8 @@
 {% block js_local %}
     <script type="text/javascript">
         function Flex() {
-            var height = $(".project").height();
+            var height = $("article.project").width();
+            $("article.text").css('min-height', height);
             $("article.text > div").css('min-height', height);
         }
         $(document).ready(function() {
