--- a/futuregreen/templates/index.html
+++ b/futuregreen/templates/index.html
@@ -4,7 +4,7 @@
 {% block content %}
     <div class="group one">
         {% for project in project_list|slice:":1" %}
-            <article class="project" id="{{ project.slug }}">
+            <article class="project box" id="{{ project.slug }}">
                 {% for image in project.projectimage_set.all %}
                     {% if image.is_main %}
                         <a href="{{ project.get_absolute_url }}"><img src="{{ image.list.url }}" /></a>
@@ -12,14 +12,14 @@
                 {%  endfor %}
             </article>
         {% endfor %}
-            <article class="text" id="profile">
+            <article class="text box" id="profile">
                 <div>
                 {%  gblock "firm_profile" for "content.ContentBlock" with "content/contentblock/excerpt.html" %}
                 <a href="#" class="tease">Read More</a>
                 </div>
             </article>
            {% for project in project_list|slice:"1:3" %}
-                <article class="project" id="{{ project.slug }}">
+                <article class="project box" id="{{ project.slug }}">
                     {% for image in project.projectimage_set.all %}
                         {% if image.is_main %}
                             <a href="{{ project.get_absolute_url }}">
@@ -31,7 +31,7 @@
     </div>
     <div class="group two">
        {% for project in project_list|slice:"3:5" %}
-           <article class="project" id="{{ project.slug }}">
+           <article class="project box" id="{{ project.slug }}">
                {% for image in project.projectimage_set.all %}
                    {% if image.is_main %}
                        <a href="{{ project.get_absolute_url }}">
@@ -45,7 +45,7 @@
     </div>
     <div class="group three">
         {% for project in project_list|slice:"5:6" %}
-            <article class="project" id="{{ project.slug }}">
+            <article class="project box" id="{{ project.slug }}">
                 {% for image in project.projectimage_set.all %}
                     {% if image.is_main %}
                         <a href="{{ project.get_absolute_url }}">
@@ -57,7 +57,7 @@
     </div>
     <div class="group four">
        {% for project in project_list|slice:"6:" %}
-            <article class="project" id="{{ project.slug }}">
+            <article class="project box" id="{{ project.slug }}">
                 {% for image in project.projectimage_set.all %}
                     {% if image.is_main %}
                         <a href="{{ project.get_absolute_url }}">
@@ -66,7 +66,7 @@
                 {%  endfor %}
             </article>
         {% endfor %}
-       <article class="text">
+       <article class="text box">
            <div>
                 <h1 class="date">{{ item.date_published|date:"M d, Y" }}</h1>
                 <h2>{{ item.title }}</h2>
