--- a/futuregreen/static/css/base.css
+++ b/futuregreen/static/css/base.css
@@ -233,88 +233,85 @@ body {
 }
 
 /* slideshow */
-    .slideshow {
-        float:left;
-        width:58.33333%;
-        position: relative;
-        overflow: auto;
-    }
+.slideshow {
+    float:left;
+    width:58.33333%;
+    position: relative;
+    overflow: auto;
+}
 
-    .slideshow .carousel {
-        position: relative;
-    }
+.slideshow .carousel {
+    position: relative;
+}
 
-    .slideshow .carousel .slides img {
-        width:100%;
-        display:block;
-    }
+.slideshow .carousel .slides img {
+    width:100%;
+    display:block;
+}
 
-    .slideshow .carousel .slides li {
-        position:relative;
-    }
+.slideshow .carousel .slides li {
+    position:relative;
+}
 
-    .slideshow .carousel .flex-caption {
-        position:absolute;
-        bottom:0;
-        left:0;
-        background:rgba(0,0,0,0.7);
-        color:#fff;
-        line-height:3em;
-        padding:0 1.33%;
-        margin: 0;
-        width:97.34%;
-    }
+.slideshow .carousel .flex-caption {
+    position:absolute;
+    bottom:0;
+    left:0;
+    background:rgba(0,0,0,0.7);
+    color:#fff;
+    line-height:3em;
+    padding:0 1.33%;
+    margin: 0;
+    width:97.34%;
+}
 
-    .slideshow .controls {
-        margin:0 0 0 0;
-        padding:0 0 0 0;
-        overflow: auto;
-    }
+.slideshow .controls {
+    margin:0 0 0 0;
+    padding:0 0 0 0;
+    overflow: auto;
+}
 
-    .slideshow .controls li {
-        margin:0 0 0 0;
-        padding:0 0 0 0;
-        list-style: none;
-        float:left;
-        background:#ccc;
-        width: 11.42857%;
-        margin-left: 1.42857%;
-        margin-right: 1.42857%;
-    }
+.slideshow .controls li {
+    margin:0 0 0 0;
+    padding:0 0 0 0;
+    list-style: none;
+    float:left;
+    width: 14.2857143%;
+}
 
-    .slideshow .controls img {
-        width:100%;
-        opacity:0.3;
-        filter:alpha(opacity=30); /* For IE8 and earlier */
-    }
+.slideshow .controls img {
+    width:100%;
+    opacity:0.3;
+    filter:alpha(opacity=30); /* For IE8 and earlier */
+}
 
-    .slideshow .controls a.active img,
-    .slideshow .controls a:hover img {
-        opacity:1.0;
-        filter:alpha(opacity=100); /* For IE8 and earlier */
-    }
+.slideshow .controls a.active img,
+.slideshow .controls a:hover img {
+    opacity:1.0;
+    filter:alpha(opacity=100); /* For IE8 and earlier */
+}
 
-    .slideshow .flex-direction-nav li {
+.slideshow .flex-direction-nav li {
 
-    }
+}
 
-    .slideshow .flex-direction-nav a {
-        position:absolute;
-        top:50%;
-        width:33%;
-        z-index:1000;
-    }
+.slideshow .flex-direction-nav a {
+    position:absolute;
+    top:50%;
+    width:33%;
+    z-index:1000;
+}
 
 
 
-    .slideshow .flex-direction-nav .next {
-        right:2.5%;
-        text-align: right;
-    }
+.slideshow .flex-direction-nav .next {
+    right:2.5%;
+    text-align: right;
+}
 
-    .slideshow .flex-direction-nav .prev {
-        left:2.5%;
-    }
+.slideshow .flex-direction-nav .prev {
+    left:2.5%;
+}
 
 /* expanded slideshow styles */
     .min {
